test/good/import/to.paka
from = sys.import("from.paka");

io.print(from.thing1);